fix: improvement collapse component.
improvement collapse component.

--- a/src/pages/atividades/atividades.scss
+++ b/src/pages/atividades/atividades.scss
@@ -1,5 +1,5 @@
 atividades {
-  ion-content {
-
+  ion-item-group {
+    background: #FFFFFF !important;
   }
 }
