--- a/src/pages/atividades/components/atividade/atividade.scss
+++ b/src/pages/atividades/components/atividade/atividade.scss
@@ -1,5 +1,5 @@
 atividade {
-  ion-card {
+  ion-item {
     img {
       height: 40px;
       width: 40px;
